--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,8 +15,20 @@
           </span>
       </div>
     </div> -->
+    <div class="score">
+      Score:<span id="scoreNumber" style="padding-left: 5px;">1000<span>
+    </div>
     <div class="pagebody">
-      Welcome to the Risk Assessment Game. The goal in this game is to manage your money, trying to obtain the highest amount you can before the timer at the top of the page runs out.<br>
+      “This is a Risk Assessment Game. Once you press the “Start Game” button the game will begin.
+      You will be shown a black regular polygon with a certain number of sides, ranging from 5 to 8. This shape will also have a number inside of it, written in white.
+      This number will either correctly label the number of sides or won’t.
+      You have one second after the shape pops up to press either “J” or “D”, “J” meaning the number correctly labels the number of sides and “D” meaning the number incorrectly labels the number of sides.
+      At any time you can press space to pause, where you can stop the game all together or continue (which will give you a new shape to avoid any chance of cheating).
+      This option will also popup if you press the wrong button for the shape and number pair you are shown or timeout (wait one second without pressing either “J” or “D”).
+      <b>Scoring:</b> This is extremely important to the study.
+      During this game, which will last 3 minutes in total, your goal is to get as many points as you can.
+      You will start with 1000 points. Everytime you get a shape and number pair incorrect you will lose 60% of your current score, and every correct one you will gain 20% of your current score.
+      It is encouraged to weigh the risk at every prompt, deciding if you want to call it quits as you don’t think you will get more than your current total, or continue and try to gain more points. Good Luck!”
       <!-- <button onClick="earnMoneyClick()">Press me for Money (+1)</button><br><br>
       <img src="dollarsignyellow.svg" height="20px" class="inlineIcon"> -->
       <!-- <input type="text" size="10" id="coinTossBet"></input>
