--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,7 +16,7 @@
       </div>
     </div> -->
     <div class="bar">
-      <u>Score:</u> <span id="scoreNumber" style="padding-left: 5px;">1000<span>&nbsp;&nbsp;&nbsp;&nbsp;<u>Time:</u> <span id="timernumber" style="padding-left: 5px">240</span>
+      <u>Score:</u> <span id="scoreNumber" style="padding-left: 5px;">1000</span>&nbsp;&nbsp;&nbsp;&nbsp;<u>Time:</u> <span id="timernumber" style="padding-left: 5px">240</span>
     </div>
     <div class="pagebody">
       <span id="instructions">
@@ -54,10 +54,7 @@
         <div class="gameScreen">
           <button onClick="gameStart()">Start Game</button>
         </div>
-        <div class="gameControls" id="gameControls">
-            <button onClick="input(this.id)" id =""
-        </div>
-    </div>
+      </div>
     <!-- <ul id="messages"></ul>
     <div class="pagebottom">
       <div class="chat">
