--- a/views/firstvisit.hbs
+++ b/views/firstvisit.hbs
@@ -3,8 +3,16 @@
     Welcome to the Risk Assessment App
   </h2>
   <form method="post" action="/firstvisit.html">
-    Username:<br>
-    <input type="text" name="username"><br><br>
+    Username:
+    <input type="text" name="username"><br>
+    Age:
+    <input type="text" name="age"><br>
+    Grade:
+    <input type="text" name="grade"><br>
+    Biological Gender:
+    <input type="text" name="gender"><br>
+    How would you rate your riskiness (1-10):
+    <input type="text" name="riskiness"><br><br>
     <input type="submit" value="Submit">
   </form>
 </body>
