--- a/views/firstvisit.hbs
+++ b/views/firstvisit.hbs
@@ -12,7 +12,7 @@
     Biological Gender:
     <input type="text" name="gender"><br>
     How would you rate your riskiness (1-10):
-    <input type="text" name="riskiness" value="Enter only the number"><br>
+    <input type="text" name="riskiness" placeholder="Enter only the number"><br>
     (10 meaning you consider yourself a big risk taker and would say you don't shy away from them at all and 1 meaning you avoid risks at all costs)<br><br>
     <input type="submit" value="Submit">
   </form>
